# alone-engine

./: .gitignore  CLAUDE_RELATORIO.md  Cargo.toml  LICENSE  README.md
crates/assets/: Cargo.toml
crates/assets/src/: resources.rs
crates/audio/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: api.rs  base.rs  core.rs  draw_data.rs  handler.rs  lib.rs
crates/engine_assets/: Cargo.toml
crates/engine_assets/src/: resources.rs
crates/engine_audio/: Cargo.toml
crates/engine_core/: Cargo.toml
crates/engine_core/src/: api.rs  core.rs  vec2.rs
crates/engine_event/: Cargo.toml
crates/engine_event/src/: event.rs
crates/engine_input/: Cargo.toml
crates/engine_input/src/: input.rs
crates/engine_macros/: Cargo.toml
crates/engine_math/: Cargo.toml
crates/engine_render/: Cargo.toml
crates/engine_render/src/: texture.rs  utils.rs
crates/engine_runtime/: Cargo.toml
crates/engine_runtime/src/: context.rs  engine.rs  lib.rs  scene.rs
crates/event/: Cargo.toml
crates/event/src/: event.rs
crates/input/: Cargo.toml
crates/input/src/: input.rs
crates/math/: Cargo.toml
crates/math/src/: color.rs  lib.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs  shader.wgsl  texture.rs  utils.rs  window.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: context.rs  dispatcher.rs  engine.rs  lib.rs  scene.rs
example/: Cargo.toml
example/assets/tilemap/: ldtk_tilemap.ldtk
example/src/: main.rs  platform.rs  player.rs
macros/src/: lib.rs
net/: Cargo.toml
net/src/: lib.rs
net_test/: Cargo.toml
net_test/src/: main.rs
src/: aplication.rs  audio.rs  base.rs  collision.rs  context.rs  engine.rs  event.rs  events.rs  input.rs  lib.rs  resource.rs  resources.rs
src/assets/: resources.rs
src/audio/: mod.rs
src/collision/: aabb.rs  mod.rs
src/components/: audio.rs  body.rs  camera.rs  collider.rs  collision.rs  mod.rs  rigid_body.rs  sprite.rs  sprite_animation.rs  tilemap.rs  timer.rs
src/core/: api.rs  base.rs  core.rs  handler.rs  ldtk_api.rs  mod.rs
src/event/: event.rs
src/input/: input.rs  mod.rs
src/math/: color.rs  mod.rs  rect.rs  transform.rs  vec2.rs
src/network/: client.rs  mod.rs  server.rs  transport.rs
src/objects/network/: client.rs  mod.rs  server.rs
src/render/: draw_data.rs  image.rs  mod.rs  render_queue.rs  texture.rs  utils.rs  window.rs
src/runtime/: app.rs  context.rs  dispatcher.rs  engine.rs  mod.rs  scene.rs  world.rs
