[package]
name = "alone-engine"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["crates/*", "example"]

[dependencies]
assets = { version = "0.1.0", path = "crates/assets" }
audio = { version = "0.1.0", path = "crates/audio" }
core = { version = "0.1.0", path = "crates/core" }
event = { version = "0.1.0", path = "crates/event" }
input = { version = "0.1.0", path = "crates/input" }
macros = { version = "0.1.0", path = "crates/macros" }
math = { version = "0.1.0", path = "crates/math" }
render = { version = "0.1.0", path = "crates/render" }
runtime = { version = "0.1.0", path = "crates/runtime" }
