[package]
name = "alone-engine"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["macros", "example"]

[dependencies]
image = "0.25.10"
indexmap = "2.14.0"
macros = { version = "0.1.0", path = "macros" }
pixels = "0.17.1"
uuid = { version = "1.23.1", features = ["v7"] }
winit = "0.30.13"
