[package]
name = "alone-engine"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["macros", "example"]

[dependencies]
image = "0.25.10"
indexmap = "2.14.0"
macros = { version = "0.1.0", path = "macros" }
pixels = "0.17.1"
rodio = "0.22.2"
uuid = { version = "1.23.1", features = ["serde", "v7"] }
winit = "0.30.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rustc-hash = "2.1.2"
thiserror = "2.0.18"
bincode = "2"
bytes = "1.11.1"
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "macros",
] }
